Implementacao de entrega, validacao e nao-CRUD II

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 NotBlank = É obrigatório
+NotNull = É obrigatório
 Size = Deve ter no mínimo {2} e no máximo {1} caracteres
 Email = Deve ser um e-mail válido
